; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kdp/ml/i386/extr_kdp_x86_common.c_kdp_machine_vm_write.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kdp/ml/i386/extr_kdp_x86_common.c_kdp_machine_vm_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kernel_pmap = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@PAGE_MASK = common dso_local global i32 0, align 4
@EFAULT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @kdp_machine_vm_write(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %15 = load i64, i64* %4, align 8
  %16 = trunc i64 %15 to i32
  %17 = call i32 @PAL_KDP_ADDR(i32 %16)
  store i32 %17, i32* %7, align 4
  %18 = load i64, i64* %5, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32 @PAL_KDP_ADDR(i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i64, i64* %6, align 8
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %11, align 4
  br label %23

23:                                               ; preds = %70, %3
  %24 = load i32, i32* %11, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %80

26:                                               ; preds = %23
  %27 = load i32, i32* @kernel_pmap, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @kdp_vtophys(i32 %27, i32 %28)
  store i32 %29, i32* %10, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %32

31:                                               ; preds = %26
  br label %81

32:                                               ; preds = %26
  %33 = load i32, i32* @kernel_pmap, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @kdp_vtophys(i32 %33, i32 %34)
  store i32 %35, i32* %9, align 4
  %36 = icmp eq i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %32
  br label %81

38:                                               ; preds = %32
  %39 = load i32, i32* @PAGE_SIZE, align 4
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* @PAGE_MASK, align 4
  %42 = and i32 %40, %41
  %43 = sub i32 %39, %42
  store i32 %43, i32* %13, align 4
  %44 = load i32, i32* @PAGE_SIZE, align 4
  %45 = load i32, i32* %10, align 4
  %46 = load i32, i32* @PAGE_MASK, align 4
  %47 = and i32 %45, %46
  %48 = sub i32 %44, %47
  store i32 %48, i32* %14, align 4
  %49 = load i32, i32* %13, align 4
  %50 = load i32, i32* %14, align 4
  %51 = icmp ugt i32 %49, %50
  br i1 %51, label %52, label %54

52:                                               ; preds = %38
  %53 = load i32, i32* %14, align 4
  store i32 %53, i32* %12, align 4
  br label %56

54:                                               ; preds = %38
  %55 = load i32, i32* %13, align 4
  store i32 %55, i32* %12, align 4
  br label %56

56:                                               ; preds = %54, %52
  %57 = load i32, i32* %12, align 4
  %58 = load i32, i32* %11, align 4
  %59 = icmp ugt i32 %57, %58
  br i1 %59, label %60, label %62

60:                                               ; preds = %56
  %61 = load i32, i32* %11, align 4
  store i32 %61, i32* %12, align 4
  br label %62

62:                                               ; preds = %60, %56
  %63 = load i64, i64* @EFAULT, align 8
  %64 = load i32, i32* %9, align 4
  %65 = load i32, i32* %10, align 4
  %66 = load i32, i32* %12, align 4
  %67 = call i64 @ml_copy_phys(i32 %64, i32 %65, i32 %66)
  %68 = icmp eq i64 %63, %67
  br i1 %68, label %69, label %70

69:                                               ; preds = %62
  br label %81

70:                                               ; preds = %62
  %71 = load i32, i32* %12, align 4
  %72 = load i32, i32* %7, align 4
  %73 = add i32 %72, %71
  store i32 %73, i32* %7, align 4
  %74 = load i32, i32* %12, align 4
  %75 = load i32, i32* %8, align 4
  %76 = add i32 %75, %74
  store i32 %76, i32* %8, align 4
  %77 = load i32, i32* %12, align 4
  %78 = load i32, i32* %11, align 4
  %79 = sub i32 %78, %77
  store i32 %79, i32* %11, align 4
  br label %23

80:                                               ; preds = %23
  br label %81

81:                                               ; preds = %80, %69, %37, %31
  %82 = load i64, i64* %6, align 8
  %83 = load i32, i32* %11, align 4
  %84 = zext i32 %83 to i64
  %85 = sub nsw i64 %82, %84
  ret i64 %85
}

declare dso_local i32 @PAL_KDP_ADDR(i32) #1

declare dso_local i32 @kdp_vtophys(i32, i32) #1

declare dso_local i64 @ml_copy_phys(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
